<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4D4D4D"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/card_t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            >

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                />

            <TextView
                android:id="@+id/tv_temperature_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_temperature"
                android:layout_toRightOf="@id/tv_temperature"
                />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_temperature"
                android:layout_marginTop="10dp"
                android:text="@string/humidity"
                />

            <TextView
                android:id="@+id/tv_humidity_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_humidity"
                android:layout_toRightOf="@id/tv_humidity"
                />

            <TextView
                android:id="@+id/tv_conditioner_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_humidity"
                android:layout_marginTop="10dp"
                android:text="@string/conditioner_mode"
                />

            <Switch
                android:id="@+id/s_air_conditioner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_conditioner_mode"
                android:layout_alignParentRight="true"
                />

            <SeekBar
                android:id="@+id/sb_conditioner_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_conditioner_mode"
                android:layout_marginTop="10dp"
                android:max="3"
                android:visibility="gone"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_g"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_t"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            >
            <TextView
                android:id="@+id/tv_yugang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/yugang_level"
                />
            <SeekBar
                android:id="@+id/sb_bath_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="3"
                android:layout_below="@id/tv_yugang"
                />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_g"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            >
            <TextView
                android:id="@+id/tv_left_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_book"
                />
            <TextView
                android:id="@+id/tv_left_book_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_left_book"
                android:layout_alignBaseline="@id/tv_left_book"
                />
            <TextView
                android:id="@+id/tv_right_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_left_book"
                android:layout_marginTop="10dp"
                android:text="@string/right_book"
                />
            <TextView
                android:id="@+id/tv_right_book_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_right_book"
                android:layout_alignBaseline="@id/tv_right_book"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <ProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
